--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" type="text/css" href="/build/main.css">
 </head>
 <body>
+  <nav>
+    <ul>
+      <li>Groepscase</li>
+      <li>Puzzel</li>
+    </ul>
+  </nav>
   <h1>Heading 1</h1>
   <h2>Heading 2</h2>
   <h3>Heading 3</h3>
