--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
   <nav>
     <img src="/assets/&samhoud_logo.svg">
     <ul>
-      <li>Groep</li>
-      <li>Puzzel</li>
+      <li><a href="#">Groep</a></li>
+      <li><a href="#">Puzzel</a></li>
     </ul>
   </nav>
+  <header>
+    <h1>Showcase</h1>
+    <p>Disruptive network effects direct mailing graphical user interface bandwidth.</p>
+  </header>
   <section>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <p>Disruptive network effects direct mailing graphical user interface bandwidth analytics growth hacking ramen burn rate. Entrepreneur stock branding. Client validation launch party buyer investor disruptive incubator. Prototype product management partner network startup responsive web design iPhone sales creative facebook client success stealth. Infrastructure ownership android churn rate disruptive gen-z supply chain influencer crowdfunding monetization innovator branding buyer. Crowdfunding non-disclosure agreement bootstrapping metrics holy grail channels sales. Seed round prototype low hanging fruit funding user experience learning curve launch party social media. Responsive web design traction focus incubator freemium ownership client alpha ecosystem. Infrastructure value proposition entrepreneur investor non-disclosure agreement pivot backing business-to-consumer launch party equity release freemium. Hypotheses business model canvas infographic early adopters technology partnership android monetization churn rate ramen release traction.</p>
-  
-    <a class="btn btn-primary" href="#">Button</a>
-    <a class="btn btn-secondary" href="#">Button</a>
   </section>
-
 </body>
 </html>
