Add card component

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <p>Disruptive network effects direct mailing graphical user interface bandwidth.</p>
   </header>
   <section>
+    <article>
+      <img alt="Preview VR image" src="https://images.samsung.com/is/image/samsung/in-feature-gear-vr-r322--56643435?$FB_TYPE_A_JPG$">
+      <div>
+        <h2>Escape Room</h2>
+        <p>Disruptive network effects direct mailing graphical user interface bandwidth.</p>
+        <a class="btn btn-primary" href="#">Start</a>
+      </div>
+    </article>
   </section>
 </body>
 </html>
